CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
GET_FILENAME_COMPONENT(CURRENT_DIRNAME ${CMAKE_CURRENT_LIST_DIR} NAME)
SET(ROOT_PROJECT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
PROJECT(${CURRENT_DIRNAME})
SET(ROOT_PROJECT_NAME ${PROJECT_NAME})

SET(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_SOURCE_DIR}/bin)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(app)
ADD_SUBDIRECTORY(test)