PROJECT(${PROJECT_NAME} VERSION 0.0.1)

INCLUDE(ExternalProject)

FILE(GLOB SRC 
    ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/*.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

FILE(GLOB HEADER 
    ${ROOT_PROJECT_DIR}/include/*.hpp
    ${ROOT_PROJECT_DIR}/include/*.h)

SOURCE_GROUP(src FILES ${SRC})
SOURCE_GROUP(include FILES ${HEADER})

INCLUDE_DIRECTORIES(${ROOT_PROJECT_DIR}/include)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRC} ${HEADER})

ADD_SUBDIRECTORY(${ROOT_PROJECT_DIR}/3rdparty/SDL ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE SDL2)

IF (WIN32)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE SDL2main)
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES OUTPUT_NAME lib_${PROJECT_NAME})
ENDIF ()

ADD_COMPILE_DEFINITIONS(${PROJECT_NAME} PRIVATE -DBUILDING_DLL)

INSTALL(TARGETS ${PROJECT_NAME} 
        RUNTIME DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
        LIBRARY DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
        ARCHIVE DESTINATION ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})