PROJECT(${PROJECT_NAME} VERSION 0.0.1 LANGUAGES CXX)

FILE(GLOB SRC 
    ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/*.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

FILE(GLOB HEADER 
    ${ROOT_PROJECT_DIR}/include/*.hpp
    ${ROOT_PROJECT_DIR}/include/*.h)

SOURCE_GROUP(src FILES ${SRC})
SOURCE_GROUP(include FILES ${HEADER})

INCLUDE_DIRECTORIES(${ROOT_PROJECT_DIR}/include)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRC} ${HEADER})

SET(SDL2IMAGE_INSTALL OFF CACHE BOOL "" FORCE) 
SET(SDL2IMAGE_SAMPLES OFF CACHE BOOL "" FORCE)
SET(SDL2TTF_INSTALL OFF CACHE BOOL "" FORCE)
SET(SDL2TTF_SAMPLES OFF CACHE BOOL "" FORCE)
SET(SDL2TTF_VENDORED ON CACHE BOOL "" FORCE)
OPTION(BUILD_DIGIVICE "" ON)

ADD_SUBDIRECTORY(${ROOT_PROJECT_DIR}/3rdparty/SDL ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/SDL)
ADD_SUBDIRECTORY(${ROOT_PROJECT_DIR}/3rdparty/SDL_image ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/SDL_image)
ADD_SUBDIRECTORY(${ROOT_PROJECT_DIR}/3rdparty/SDL_ttf ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/SDL_ttf)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${ROOT_PROJECT_DIR}/3rdparty/SDL/include)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${ROOT_PROJECT_DIR}/3rdparty/SDL_image/include)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${ROOT_PROJECT_DIR}/3rdparty/SDL_ttf/include)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC SDL2 SDL2_image SDL2_ttf)

IF (WIN32)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC SDL2main)
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES OUTPUT_NAME lib${PROJECT_NAME})
ELSEIF(UNIX)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC pthread dl m)
ENDIF ()

ADD_DEFINITIONS(-DBUILDING_DLL)

INSTALL(TARGETS ${PROJECT_NAME} 
        RUNTIME DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
        LIBRARY DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
        ARCHIVE DESTINATION ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})